syntax = "proto3";
package m2g.pb;

enum KeyType {
  // Default buttons
  NO_KEY = 0;
  PAUSE = 1;
  CONSOLE = 2;
  BACKSPACE = 3;
  RETURN = 4;
  ZOOM_OUT = 5;
  ZOOM_IN = 6;
  MOVE_UP = 7;
  MOVE_DOWN = 8;
  MOVE_LEFT = 9;
  MOVE_RIGHT = 10;

  LEFT_FLIPPER = 20;
  RIGHT_FLIPPER = 21;
  BALL_LAUNCHER = 22;

  TOGGLE_LIGHT = 30;
  ADD_WATER = 31;
  TOGGLE_HEATER = 32;
}
